--- a/css/style.css
+++ b/css/style.css
@@ -142,18 +142,6 @@ MAIN END
 
 /*
 ###########################################
-INFO INI
-###########################################
-*/
-
-/*
-###########################################
-INFO INI
-###########################################
-*/
-
-/*
-###########################################
 FOOTER INI
 ###########################################
 */
@@ -192,6 +180,7 @@ ul li i{
     font-weight: 600;
     font-size: 16px;
     position: absolute;
+    cursor: pointer;
 }
 ul li p{
     display: flex;
@@ -202,6 +191,7 @@ ul li p{
 }
 .fa-solid, .fa-brands{
     font-size: 17px;
+    cursor: pointer;
 }
 
 /*
